git-svn-id: svn://svn.freehep.org/svn/freehep/trunk/hepio/freehep-rootio@10712 52ca69fb-99d5-0310-9ee9-f1395e6d145f